<resources>
    <string name="app_name">googleone</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="enter_mobile_number">enter mobile number</string>
    <string name="_880">+880</string>
    <string name="_12345678999">12345678999</string>
    <string name="get_otp">Get Otp</string>
    <string name="enter_the_otp">enter the OTP</string>

    <string name="resend_otp">Resend OTP</string>
    <string name="verify">Verify</string>
    <string name="did_t_receive_the_code">did\'t receive the code?</string>
</resources>