<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SendOtp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/send" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorSecondary"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:text="@string/enter_mobile_number"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_marginStart="00dp"
            android:layout_marginEnd="00dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:textColor="@color/colorSecondary"
                android:textSize="17sp"
                android:textStyle="bold"
                android:text="@string/_880"/>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:id="@+id/inputMobile"
                android:background="@null"
                android:hint="@string/_12345678999"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:textStyle="bold"
                android:textSize="17sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginEnd="70dp"
            android:layout_marginStart="70dp"
            android:layout_marginTop="9dp"
            android:background="@color/colorPrimary"/>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonGetOTP"
                android:layout_margin="30dp"
                android:textSize="17sp"
                android:text="@string/get_otp"
                android:background="@drawable/background_button"
                android:textColor="@color/colorWhite"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>



    </LinearLayout>

</ScrollView>