<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOtp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:layout_marginTop="80dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/verify" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/otp_verification"
            android:textColor="@color/colorSecondary"
            android:textSize="22sp"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginStart="33dp"
            android:layout_marginEnd="33dp"
            android:text="@string/enter_the_otp"
            android:textSize="15sp"
            android:gravity="center"
            android:textColor="@color/colorTextPrimary"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:id="@+id/textMobile"
            android:textColor="@color/colorSecondary"
            android:textSize="15sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                android:textColor="@color/colorSecondary"/>

            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                android:textColor="@color/colorSecondary"/>
            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                android:textColor="@color/colorSecondary"/>
            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                android:textColor="@color/colorSecondary"/>
            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                android:textColor="@color/colorSecondary"/>
            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="45dp"
                android:layout_marginStart="4dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                android:textColor="@color/colorSecondary"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextPrimary"
                android:text="@string/did_t_receive_the_code"
                android:textSize="15sp"
                android:textStyle="bold"/>
            <TextView
                android:id="@+id/textResendOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/resend_otp"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:textSize="17sp"/>

        </LinearLayout>
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/buttonVerify"
                android:layout_margin="30dp"
                android:textSize="17sp"
                android:text="@string/verify"
                android:background="@drawable/background_verify"
                android:textColor="@color/colorWhite"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:visibility="gone"/>
        </FrameLayout>

    </LinearLayout>

</ScrollView>